- Got Thorntail and wildfly running - Smallrye doesn't register tracer on GlobalTracer and therefore we got always the NoopTracer instead of the real Tracer and ServerSPanDecorator therefore did not work - Added entity stream after reading it, otherwise no response available